k8s/jellyfin/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    # nginx.ingress.kubernetes.io/proxy-body-size: "0"         # allow large uploads
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /jellyfin
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
